--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
-  "name": "select2-bootstrap-css",
-  "version": "1.2.2",
+  "name": "select2-bootstrap",
+  "version": "1.3.0",
   "ignore": [
     "**/.*",
     "node_modules",
-    "components"
+    "lib/vendor"
   ],
   "devDependencies": {
-    "bootstrap": "3.0.0",
-    "sass-bootstrap": "git://github.com/jlong/sass-twitter-bootstrap.git#a74363ec86353cff4e51559941be8f1da511be55",
+    "bootstrap": "~3.1.0",
+    "bootstrap-sass-official": "~3.1.0",
     "respond": "~1.2.0"
   }
 }
